deployments/kubernetes/final/backend.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      field.cattle.io/publicEndpoints: '[{"addresses":["107.172.168.164"],"port":80,"protocol":"HTTP","serviceName":"url-shortener:frontend","ingressName":"url-shortener:frontend","hostname":"link-apps.deepracing.ml","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2021-10-31T15:02:18Z","generation":3,"labels":{"app":"frontend"},"name":"frontend","namespace":"url-shortener","resourceVersion":"11217649","selfLink":"/apis/apps/v1/namespaces/url-shortener/deployments/frontend"},"spec":{"progressDeadlineSeconds":600,"replicas":2,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"frontend"}},"strategy":{"rollingUp [...]
    creationTimestamp: "2021-10-31T15:18:03Z"
    generation: 2
    labels:
      app: frontend
    name: frontend
    namespace: url-shortener
    resourceVersion: "11218586"
    selfLink: /apis/apps/v1/namespaces/url-shortener/deployments/frontend
    uid: 1107c13e-5694-4ab3-8320-12e03cca9db1
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: frontend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: frontend
      spec:
        containers:
        - env:
          - name: DB_HOST
            value: mariadb
          - name: DB_PASS
            value: urlshortener
          image: dungviettran89/url-shortener-frontend-react:latest
          imagePullPolicy: Always
          name: url-shortener-frontend-react
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2021-10-31T15:18:06Z"
      lastUpdateTime: "2021-10-31T15:18:06Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-10-31T15:18:03Z"
      lastUpdateTime: "2021-10-31T15:18:06Z"
      message: ReplicaSet "frontend-64cdb6477d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 2
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":"2021-10-31T15:02:57Z","labels":{"app":"frontend"},"name":"frontend","namespace":"url-shortener","resourceVersion":"11217658","selfLink":"/api/v1/namespaces/url-shortener/services/frontend"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"frontend"},"sessionAffinity":"None","type":"ClusterIP"},"status":{"loadBalancer":{}}}
    creationTimestamp: "2021-10-31T15:18:11Z"
    labels:
      app: frontend
    name: frontend
    namespace: url-shortener
    resourceVersion: "11218545"
    selfLink: /api/v1/namespaces/url-shortener/services/frontend
    uid: ef2a4b37-efb6-4c9c-81c9-304a0b130c88
  spec:
    clusterIP: 10.43.39.110
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      field.cattle.io/creatorId: user-pdn67
      field.cattle.io/ingressState: '{"ZnJvbnRlbmQvdXJsLXNob3J0ZW5lci9saW5rLWFwcHMuZGVlcHJhY2luZy5tbC8vODA=":""}'
      field.cattle.io/publicEndpoints: '[{"addresses":["107.172.168.164"],"port":80,"protocol":"HTTP","serviceName":"url-shortener:frontend","ingressName":"url-shortener:frontend","hostname":"link-apps.deepracing.ml","allNodes":false}]'
    creationTimestamp: "2021-10-31T15:18:49Z"
    generation: 1
    labels:
      cattle.io/creator: norman
    name: frontend
    namespace: url-shortener
    resourceVersion: "11218582"
    selfLink: /apis/extensions/v1beta1/namespaces/url-shortener/ingresses/frontend
    uid: 9d7c43f8-2e60-4698-83a0-2f405a43ae38
  spec:
    rules:
    - host: link-apps.deepracing.ml
      http:
        paths:
        - backend:
            serviceName: frontend
            servicePort: 80
  status:
    loadBalancer:
      ingress:
      - ip: 107.172.168.164
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
