deployments/kubernetes/final/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/creatorId: user-pdn67
  creationTimestamp: "2021-10-31T14:23:00Z"
  generation: 1
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-url-shortener-mariadb
  name: mariadb
  namespace: url-shortener
  resourceVersion: "11215535"
  selfLink: /apis/apps/v1/namespaces/url-shortener/deployments/mariadb
  uid: d8d602cf-9cb9-4f05-880f-3326cc181637
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-url-shortener-mariadb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2021-10-31T14:23:00Z"
        field.cattle.io/ports: '[[{"containerPort":3306,"dnsName":"mariadb","hostPort":0,"kind":"ClusterIP","name":"3306tcp02","protocol":"TCP","sourcePort":0}]]'
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-url-shortener-mariadb
    spec:
      containers:
      - env:
        - name: MARIADB_RANDOM_ROOT_PASSWORD
          value: "yes"
        - name: MYSQL_DATABASE
          value: urlshortener
        - name: MYSQL_PASSWORD
          value: urlshortener
        - name: MYSQL_USER
          value: urlshortener
        image: mariadb:10.6
        imagePullPolicy: Always
        name: mariadb
        ports:
        - containerPort: 3306
          name: 3306tcp02
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-10-31T14:23:18Z"
    lastUpdateTime: "2021-10-31T14:23:18Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-10-31T14:23:00Z"
    lastUpdateTime: "2021-10-31T14:23:18Z"
    message: ReplicaSet "mariadb-7f7fdf6f94" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
